--- a/.config/i3/config
+++ b/.config/i3/config
@@ -161,16 +161,16 @@ bindsym $mod+u border none
 
 
 # workspace names
-set $ws1 
-set $ws2 
-set $ws3 
-set $ws4 
-set $ws5 
-set $ws6 
-set $ws7 
-set $ws8 
-set $ws9 
-set $ws10 
+set $ws1 1:
+set $ws2 2:
+set $ws3 3:
+set $ws4 4:
+set $ws5 5:
+set $ws6 6:
+set $ws7 7:
+set $ws8 8:
+set $ws9 9:
+set $ws10 0:
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -197,16 +197,16 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
 # assign
-assign [class="chromium"] $ws4
-assign [class="arandr"] $ws10
-assign [class="wps"] $ws6
-assign [class="et"] $ws6
-assign [class="wpp"] $ws6
-assign [class="virtualbox"] $ws9
-assign [class="steam"] $ws5
-assign [class="thunderbird"] $ws7
-assign [class="slack"] $ws8
-assign [class="virtualbox"] $ws9
+# assign [class="chromium"] $ws4
+# assign [class="arandr"] $ws10
+# assign [class="wps"] $ws6
+# assign [class="et"] $ws6
+# assign [class="wpp"] $ws6
+# assign [class="virtualbox"] $ws9
+# assign [class="steam"] $ws5
+# assign [class="thunderbird"] $ws7
+# assign [class="slack"] $ws8
+# assign [class="virtualbox"] $ws9
 
 # for_window [instance="Steam"] floating enable
 # for_window [instance="Steam"] border none
