--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -44,8 +44,8 @@ font-4 = "material icons:pixelsize=16;3"
 
 modules-left = i3
 ;modules-center = mpd
-modules-center = xwindow
-modules-right = wlan cpu memory temperature battery date
+modules-center =
+modules-right = alsa wlan cpu memory temperature battery date
 
 tray-position = right
 tray-padding = 2
@@ -255,7 +255,7 @@ label = %date% %time%
 type = internal/volume
 
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL
+label-volume = 
 label-volume-foreground = ${root.foreground}
 
 format-muted-prefix = " "
